--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="SERES: Semantic-Aware Neural Reconstruction from Sparse Views">
+        content="Scalable RL-Based Toolpath Planner for 3D Printing">
   <meta name="keywords" content="NeRF, NeuS, Neuralangelo">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SERES: Semantic-Aware Neural Reconstruction from Sparse Views</title>
+  <title>Scalable RL-Based Toolpath Planner for 3D Printing</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 
@@ -50,7 +50,7 @@
   </div>
  
     <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-      <a class="navbar-item" href="SERES0.github.io">
+      <a class="navbar-item" href="toolpath-planer.github.io">
       <span class="icon">
           <i class="fas fa-home"></i>
       </span>
@@ -72,7 +72,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">SERES: Semantic-Aware Neural Reconstruction from Sparse Views</h1>
+          <h1 class="title is-1 publication-title">Scalable RL-Based Toolpath Planner for 3D Printing</h1>
          
             <div class="publication-links">
               <!-- PDF Link. -->
@@ -259,7 +259,7 @@ We propose a semantic-aware neural reconstruction method to generate 3D high-fid
          href="./static/files/under-review">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://github.com/SERES0" class="external-link" disabled>
+      <a class="icon-link" href="toolpath-planer.github.io" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
