--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <img src="./static/images/Teaser (1).png" width="100%" style="margin-left: auto;margin-right: auto;display: block;">
       <h2 class="subtitle has-text-centered">
         <p>&nbsp;</p>
-        <span class="dnerf"></span> This paper introduces a reinforcement learning-based planner that optimizes 3D printing toolpaths for large-scale applications, demonstrating versatility and efficiency across different printing methods with significant improvements in model quality and reduction of printing errors.
+        <span class="dnerf"></span> This paper introduces a reinforcement learning-based planner that optimizes 3D printing toolpaths for large-scale applications, demonstrating generality and efficiency across different printing methods with significant improvements in model quality and reduction of printing errors.
 
 
 
