--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ the thermal distortion in metallic printing can be reduced by 24.9%.</div>
       <div class="column is-full-width">
         <h2 class="title is-3">How our system works</h2>
         <div class="content has-text-justified">
-          <img src="./static/images/subgraph triangle18.png" width="100%" style="margin-left: auto;margin-right: auto;display: block;">
+          <img src="./static/images/subgraph triangle1sss8 (1).png" width="100%" style="margin-left: auto;margin-right: auto;display: block;">
           <p>&nbsp;</p>
           <p>Our  RL-based planner is used to compute optimized toolpaths for 3D printing by navigating a graph. The method involves exploring a graph structured into local sub-graphs (LSGs) with defined neighbor rings, focusing on a current node. The planner uses a deep Q-network to evaluate and select the next best node based on learned Q-values, considering the current state of exploration, which incorporates the positions of nodes and their adjacency relationships. This process highlights changes and decisions in the path planning through color-coded blocks to visualize differences in adjacency matrices, aiding in understanding the transition between states. The method iteratively applies this process to navigate through the graph, ultimately determining an optimized toolpath, demonstrated through a series of illustrative steps and the resulting toolpath. This approach showcases how reinforcement learning can be effectively applied to complex pathfinding problems in 3D printing applications.
           </p>
