--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description"
         content="Scalable RL-Based Toolpath Planner for 3D Printing">
-  <meta name="keywords" content="NeRF, NeuS, Neuralangelo">
+  <meta name="keywords" content="RL, Toolpath, 3D Printing">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Scalable RL-Based Toolpath Planner for 3D Printing</title>
 
