--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="hero-body">
+    <div class="hero-body" style="padding:0"> 
       <img src="./static/images/Teaser.png" width="101%" style="margin-left: auto;margin-right: auto;display: block;">
       <h2 class="subtitle has-text-centered">
         <p>&nbsp;</p>
