--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <img src="./static/images/Teaser.png" width="101%" style="margin-left: auto;margin-right: auto;display: block;">
       <h2 class="subtitle has-text-centered">
         <p>&nbsp;</p>
-        <span class="dnerf"></span> This paper introduces a reinforcement learning-based planner that optimizes 3D printing toolpaths for large-scale applications, demonstrating generality and efficiency across different printing methods with significant improvements in printing quality and strength enhancement.
+        <span class="dnerf"></span> This paper introduces a reinforcement learning-based planner that optimizes 3D printing toolpaths for large-scale applications, demonstrating generality and efficiency across different printing processes with significant improvements in printing quality and deformation.
 
 
 
@@ -148,8 +148,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>We presents an efficient reinforcement learning (RL) based planner for computing optimized 3D printing toolpaths, which can work on graphs on large scales by constructing the state space on-the-fly. The planner can cover different 3D printing applications by defining their corresponding reward functions and state spaces. Toolpath generation problems in wire-frame printing, continuous fiber printing, and metallic printing are selected
-here to demonstrate generality. The resultant toolpaths have been applied in physical experiments to verify the performance of the planner. By this planner, wire-frame models with up to 3.3k struts can be successfully printed, up to 93.3% of sharp turns on continuous fiber toolpaths can be avoided, and
-the thermal distortion in metallic printing can be reduced by 24.9%.</div>
+here to demonstrate generality. The resultant toolpaths have been applied in physical experiments to verify the performance of the planner. By this planner, wire-frame models with up to 3.3k struts can be successfully printed, up to 93.3% of sharp turns on continuous fiber toolpaths can be avoided, and the thermal distortion in metallic printing can be reduced by 24.9%.</div>
       </div>
     </div>
     <!--/ Abstract. -->
@@ -168,8 +167,8 @@ the thermal distortion in metallic printing can be reduced by 24.9%.</div>
         <div class="content has-text-justified">
           <img src="./static/images/subgraph triangle1sss8 (1).png" width="100%" style="margin-left: auto;margin-right: auto;display: block;">
           <p>&nbsp;</p>
-          <p>llustration of using our RL-based planner to compute the toolpath on a graph G. Our RL-based planner explores G on a LSG with n-rings
-of neighbors (n = 2 in this example), given a current node v<sub>c</sub> (orange one). (h) The next best node of v<sub>c</sub> is determined by learning an updated deep
+          <p>llustration of using our RL-based planner to compute the toolpath on a graph G. Our RL-based planner explores G on a Local Search Graph (LSG) with n-rings
+of neighbors (n = 2 in this example), given a current node v<sub>c</sub> (orange one). The next best node of v<sub>c</sub> is determined by learning an updated deep
 Q-network to compute the Q-values (green bars) on every nodes in the LSG according to the state S<sup>*</sup>. The moving state S<sup>*</sup> is a tensor commonly determined
 by the current LSG and two previous steps in the partially planned toolpath (in black), which is formed by three adjacency matrices A<sup>‡</sup>, A<sup>†</sup> and A together
 with the positions of the LSG’s nodes listed in the last three columns. Color blocks in highlight the differences between A<sup>†</sup> and A (pink color) and between
@@ -199,7 +198,7 @@ A<sup>‡</sup> and A<sup>†</sup> (blue color). The best next node will update
         <div class="content has-text-justified">
           <img src="./static/images/overview.png" width="90%" style="margin-left: auto;margin-right: auto;display: block;">
           <p>&nbsp;</p>
-          <p> Applications in computing optimized toolpaths across three applications: wire-frame models, continuous fiber-reinforced layers, and LPBF metal printing. Starting with specific input graphs for each task, the planner generates optimized toolpaths that meet different manufacturing objectives. These paths are visualized in distinct colors—red, green, and blue arrows—to indicate different moving directions. The effectiveness of these optimized toolpaths is verified through physical experiments, demonstrating the planner's capability to enhance printing quality in diverse 3D printing processes.</p>
+          <p> Applications in computing optimized toolpaths for 3D printing problems of wire-frame models, the continuous fiber reinforced layer for Carbon Fiber Reinforced Thermoplastics (CFRTP), and Laser Powder Bed Fusion (LPBF) based metal printing. Given input graphs, our planner can generate toolpaths optimized according to manufacturing objectives. The toolpaths have been tested in physical experiments to produce the results. Three different parts of the toolpath are visualized as red, green, and blue arrows.</p>
         </div>
         <br/>
 
@@ -223,7 +222,7 @@ A<sup>‡</sup> and A<sup>†</sup> (blue color). The best next node will update
         <h3 class="title is-4">Progressive results of the planned toolpaths</h3>
         <div class="content has-text-justified">
           <img src="./static/images/pathTracing.png" width="100%" style="margin-left: auto;margin-right: auto;display: block;">
-		  <p>Progressive results of the planned toolpaths for (a) wire-frame printing, (b) CCF printing, and (c) metallic printing. For CCF printing, bold lines are those edges traveled twice. The first graph of each printing process is the input graph. </p>
+		  <p>Progressive results of the planned toolpaths for wire-frame printing, CCF printing, and metallic printing. For CCF printing, bold lines are those edges traveled twice. The first graph of each printing process is the input graph. </p>
 
         </div>
         <br/>
@@ -262,7 +261,7 @@ toolpath (2.45mm) and the chessboard toolpath (2.43mm).
         <h3 class="title is-4">All fabrication results </h3>
         <div class="content has-text-justified">
           <img src="./static/images/manufacturing results.png" width="100%" style="margin-left: auto;margin-right: auto;display: block;">
-          <p> Our method has been tested on a variety of models by incorporating the manufacturing objectives in different applications: (a) wire-frame printing, (b) CCF printing for CFRTPs, and (c) LPBF-based metallic printing. (Top Row) Computational results for toolpath planning. (Bottom Row) Fabrication results for the corresponding models.      </p>
+          <p> Our method has been tested on a variety of models by incorporating the manufacturing objectives in different applications: wire-frame printing, CCF printing for CFRTPs, and LPBF-based metallic printing. (Top Row) Computational results for toolpath planning. (Bottom Row) Fabrication results for the corresponding models.      </p>
         </div>
        
       </div>
