--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Scalable RL-Based Toolpath Planner for 3D Printing">
   <meta name="keywords" content="RL, Toolpath, 3D Printing">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Scalable RL-Based Toolpath Planner for 3D Printing</title>
+  <title>Learning Based Toolpath Planner on Diverse Graphs for 3D Printing</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 
