--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Scalable RL-Based Toolpath Planner for 3D Printing">
+        content="Learning Based Toolpath Planner on Diverse Graphs for 3D Printing">
   <meta name="keywords" content="RL, Toolpath, 3D Printing">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Learning Based Toolpath Planner on Diverse Graphs for 3D Printing</title>
