--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title"  style="font-size: 40px;">Scalable RL-Based Toolpath Planner for 3D Printing</h1>
+          <h1 class="title is-1 publication-title"  style="font-size: 40px;">Learning Based Toolpath Planner on Diverse Graphs for 3D Printing</h1>
          
             <div class="publication-links">
               <!-- PDF Link. -->
@@ -165,7 +165,7 @@ here to demonstrate generality. The resultant toolpaths have been applied in phy
       <div class="column is-full-width">
         <h2 class="title is-3">How our system works</h2>
         <div class="content has-text-justified">
-          <img src="./static/images/subgraph triangle1sss8 (1).png" width="100%" style="margin-left: auto;margin-right: auto;display: block;">
+          <img src="./static/images/subgraph triangle18.png" width="100%" style="margin-left: auto;margin-right: auto;display: block;">
           <p>&nbsp;</p>
           <p>llustration of using our RL-based planner to compute the toolpath on a graph G. Our RL-based planner explores G on a Local Search Graph (LSG) with n-rings
 of neighbors (n = 2 in this example), given a current node v<sub>c</sub> (orange one). The next best node of v<sub>c</sub> is determined by learning an updated deep
