--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title"  style="font-size: 40px;">Learning Based Toolpath Planner on Diverse Graphs for 3D Printing</h1>
+	  <h2 class="subtitle is-4">
+            Yuming Huang<sup>1</sup>, Yuhu Guo<sup>1,2</sup>, Renbo Su<sup>1</sup>, Xingjian Han<sup>3</sup>, Junhao Ding<sup>4</sup>, Tianyu Zhang<sup>1</sup>, Tao Liu<sup>1</sup>, Weiming Wang<sup>1</sup>, Guoxin Fang<sup>4</sup>, Xu Song<sup>4</sup>, Emily Whiting<sup>3</sup>, Charlie C. L. Wang<sup>1,*</sup>
+          </h2>
+          <p class="authors-info">
+            1. The University of Manchester, United Kingdom<br>
+            2. Equal contribution of the first two authors<br>
+            3. Boston University, USA<br>
+            4. The Chinese University of Hong Kong, Hong Kong<br>
+            * Corresponding author: changling.wang@manchester.ac.uk (Charlie C. L. Wang)
+          </p>
          
             <div class="publication-links">
               <!-- PDF Link. -->
