--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
           <p class="authors-info">
             1. The University of Manchester, United Kingdom<br>
             2. Boston University, USA<br>
-            3. The Chinese University of Hong Kong, Hong Kong<br>
+            3. The Chinese University of Hong Kong, Hong Kong, China<br>
 	    * Equal contribution of the first two authors<br>
-            † Corresponding author: changling.wang@manchester.ac.uk (Charlie C. L. Wang)
+            † Corresponding author Email: changling.wang@manchester.ac.uk
           </p>
          
             <div class="publication-links">
