--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title"  style="font-size: 40px;">Learning Based Toolpath Planner on Diverse Graphs for 3D Printing</h1>
+	  <h2 class="subtitle is-4" style="color:#FFB6C1;">SIGGRAPH Asia 2024 (ACM Transactions on Graphics)</h2>
+
 	  <h2 class="subtitle is-4">
             Yuming Huang<sup>1, *</sup>, Yuhu Guo<sup>1,*</sup>, Renbo Su<sup>1</sup>, Xingjian Han<sup>2</sup>, Junhao Ding<sup>3</sup>, Tianyu Zhang<sup>1</sup>, Tao Liu<sup>1</sup>, Weiming Wang<sup>1</sup>, Guoxin Fang<sup>3</sup>, Xu Song<sup>3</sup>, Emily Whiting<sup>2</sup>, <br> 
 	    Charlie C. L. Wang<sup>1,†</sup>
