--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p class="authors-info">
             1. The University of Manchester, United Kingdom<br>
             2. Boston University, USA<br>
-            3. The Chinese University of Hong Kong, Hong Kong, China<br>
+            3. The Chinese University of Hong Kong, Hong Kong SAR., China<br>
 	    * Equal contribution of the first two authors<br>
             † Corresponding author Email: changling.wang@manchester.ac.uk
           </p>
