--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
                   <span>arXiv</span>
                 </a>
               </span>
-              <!-- Video Link.
+              <!-- Video Link.-->
               <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
+                <a href="https://www.youtube.com/watch?v=E0ljkat4FSU"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
                   </span>
                   <span>Video</span>
                 </a>
-              </span>-->
+              </span>
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="toolpath-planer.github.io"
