--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             2. Boston University, United States<br>
             3. The Chinese University of Hong Kong, Hong Kong SAR., China<br>
 	    * Equal contribution of the first two authors<br>
-            † Corresponding author Email: changling.wang@manchester.ac.uk
+            † Corresponding author (Email: changling.wang@manchester.ac.uk)
           </p>
          
             <div class="publication-links">
