--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             Yuming Huang<sup>1, *</sup>, Yuhu Guo<sup>1,*</sup>, Renbo Su<sup>1</sup>, Xingjian Han<sup>2</sup>, Junhao Ding<sup>3</sup>, Tianyu Zhang<sup>1</sup>, Tao Liu<sup>1</sup>, Weiming Wang<sup>1</sup>, Guoxin Fang<sup>3</sup>, Xu Song<sup>3</sup>, Emily Whiting<sup>2</sup>, <br> 
 	    Charlie C. L. Wang<sup>1,†</sup>
           </h2>
-          <p class="authors-info">
+          <p class="authors-info" style="text-align: left;">
             1. The University of Manchester, United Kingdom<br>
             2. Boston University, United States<br>
             3. The Chinese University of Hong Kong, Hong Kong SAR., China<br>
