--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="toolpath-planer.github.io"
+                <a href="http://arxiv.org/abs/2408.09198"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
