--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
 	  <h2 class="subtitle is-4" style="color:#FF4C4C;">SIGGRAPH Asia 2024 (ACM Transactions on Graphics)</h2>
 
 	  <h2 class="subtitle is-4" style="text-align: left;">
-            Yuming Huang<sup>1, *</sup>, Yuhu Guo<sup>1,*</sup>, Renbo Su<sup>1</sup>, Xingjian Han<sup>2</sup>, Junhao Ding<sup>3</sup>, Tianyu Zhang<sup>1</sup>, Tao Liu<sup>1</sup>, Weiming Wang<sup>1</sup>, Guoxin Fang<sup>3</sup>, Xu Song<sup>3</sup>, Emily Whiting<sup>2</sup>,  
-	    Charlie C. L. Wang<sup>1,†</sup>
-          </h2>
+  Yuming Huang<sup>1, *</sup>, Yuhu Guo<sup>1, *</sup>, Renbo Su<sup>1</sup>, Xingjian Han<sup>2</sup>, Junhao Ding<sup>3</sup>, Tianyu Zhang<sup>1</sup>, Tao Liu<sup>1</sup>, <br>
+  Weiming Wang<sup>1</sup>, Guoxin Fang<sup>3</sup>, Xu Song<sup>3</sup>, Emily Whiting<sup>2</sup>, Charlie C. L. Wang<sup>1, †</sup>
+	  </h2>
+
           <p class="authors-info" style="text-align: left;">
             1. The University of Manchester, United Kingdom<br>
             2. Boston University, United States<br>
