--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="toolpath-planer.github.io"
+                <a href="https://github.com/yuminghuang1995/RL3DPToolpathPlanner"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (coming soon)</span>
+                  <span>Code</span>
                   </a>
               </span>
             </div>
